<resources>
    <string name="facebook_app_id">253912926455732</string>
    <string name="fb_login_protocol_scheme">fb253912926455732</string>
    <string name="facebook_client_token">7dda72b75577402e2d4d405bb1082bc9</string>

    <string name="app_name">Zeew</string>
    <string name="action_settings">Settings</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="error_message_email">Please enter a valid email</string>
    <string name="error_message_password">Password must be at least 6 characters</string>
    <string name="button_sign_in">Sign in</string>
    <string name="message_sign_up">Don\'t have an account?</string>
    <string name="button_sign_up">Sign up</string>
    <string name="signup_fragment_label">Signup Fragment</string>
    <string name="home_fragment_label">Home Fragment</string>
    <string name="button_auth_google">Sign in with Google</string>
    <string name="button_auth_facebook">Sign in with Facebook</string>
    <string name="text_sign_in">Sign in</string>
    <string name="error_message_facebook">Facebook login canceled</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_referral_code">Referral code</string>
    <string name="text_join_us">Join us</string>
    <string name="button_join_us">Join us</string>
    <string name="error_message_name">Name must be at least 3 characters</string>
    <string name="error_message_confirm_password">"Passwords must be valid and match"</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="error_message_phone_number">Please enter a valid phone number</string>
    <string name="phone_number_code_egypt">+20</string>
    <string name="preference_file_key">zeew preferences</string>
    <string name="preference_username_key">username</string>
    <string name="fragment_home_message">Welcome back, %s</string>
    <string name="splash_fragment_label">Splash Fragment</string>
    <string name="button_logout">Logout</string>
</resources>