<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SplashFragment">

    <fragment
        android:id="@+id/SplashFragment"
        android:name="com.zeew.ui.splash.SplashFragment"
        android:label="@string/splash_fragment_label"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/navigateToLogin"
            app:destination="@id/LoginFragment"
            app:popUpTo="@+id/SplashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/navigateToHome"
            app:destination="@id/HomeFragment"
            app:popUpTo="@+id/SplashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.zeew.ui.login.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/navigateToSignup"
            app:destination="@id/SignupFragment" />
        <action
            android:id="@+id/navigateToHome"
            app:destination="@id/HomeFragment"
            app:popUpTo="@+id/LoginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/SignupFragment"
        android:name="com.zeew.ui.signup.SignupFragment"
        android:label="@string/signup_fragment_label"
        tools:layout="@layout/fragment_signup">
        <action
            android:id="@+id/navigateToHome"
            app:destination="@id/HomeFragment"
            app:popUpTo="@+id/LoginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.zeew.ui.home.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/navigateToLogin"
            app:destination="@id/LoginFragment"
            app:popUpTo="@+id/HomeFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>