<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.zeew.ui.signup.SignupViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_join_us"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/first_name_text_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_first_name"
                        app:boxBackgroundMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/first_name_text_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/last_name_text_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_last_name"
                        app:boxBackgroundMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/last_name_text_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_text_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        app:boxBackgroundMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_text_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        tools:ignore="RtlSymmetry">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="8dp"
                            android:text="@string/phone_number_code_egypt"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            app:drawableStartCompat="@drawable/ic_egypt" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/phone_number_input_layout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_phone_number"
                            app:boxBackgroundMode="none">

                            <Space
                                android:layout_width="8dp"
                                android:layout_height="wrap_content" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/phone_number_text_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="phone" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_text_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        app:boxBackgroundMode="none"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/accent_green">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_text_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirm_password_text_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_confirm_password"
                        app:boxBackgroundMode="none"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/accent_green">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirm_password_text_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/referral_code_text_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_referral_code"
                        app:boxBackgroundMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/referral_code_text_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:onClick="@{_ -> viewModel.onSignupClick()}"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/button_join_us"
                    android:textAllCaps="false"
                    app:cornerRadius="24dp"
                    app:idleStatus="@{viewModel.signupResource}"
                    app:strokeColor="@color/accent_green" />


                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:progressStatus="@{viewModel.signupResource}" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</layout>