<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.zeew.ui.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
                android:textColor="@color/accent_green"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_sign_in"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_text_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        app:boxBackgroundMode="none">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_text_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="8dp"
                        android:background="@color/accent_green" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_text_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        app:boxBackgroundMode="none"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/accent_green">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_text_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:onClick="@{_ -> viewModel.onLoginClick()}"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/button_sign_in"
                    android:textAllCaps="false"
                    app:cornerRadius="24dp"
                    app:idleStatus="@{viewModel.loginResource}" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:progressStatus="@{viewModel.loginResource}" />
            </FrameLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message_sign_up" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{_ -> viewModel.onSignupClick()}"
                    android:padding="16dp"
                    android:text="@string/button_sign_up"
                    android:textColor="@color/accent_green" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:background="@color/divider_color" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:idleStatus="@{viewModel.socialLoginResource}">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fc_sign_in_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/button_auth_facebook"
                        android:textAllCaps="false"
                        android:textColor="@color/accent_facebook"
                        app:cornerRadius="24dp"
                        app:icon="@drawable/ic_facebook"
                        app:iconTint="@color/accent_facebook"
                        app:strokeColor="@color/accent_facebook" />


                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="16dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/google_sign_in_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/button_auth_google"
                        android:textAllCaps="false"
                        android:textColor="@color/accent_google"
                        app:cornerRadius="24dp"
                        app:icon="@drawable/ic_google"
                        app:iconTint="@color/accent_google"
                        app:strokeColor="@color/accent_google" />
                </LinearLayout>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:progressStatus="@{viewModel.socialLoginResource}" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</layout>